# ESOLinuxAddonManager

./: .gitignore  AddonDownloader.cpp  AddonDownloader.h  AddonManager.cpp  AddonManager.h  CMakeLists.txt  CMakeLists.txt.user.ea9f885  ESOLinuxAddonManager.pro  LICENSE  README.md  Requirements.txt  addondownloader.py  addonmanager.py  addons.txt  addonslocation.txt  build.sh  main.cpp  main.py  main.qml  requirements.txt
.dap/: launch.json
.github/: FUNDING.yml
python_old/: addondownloader.py  addonmanager.py  main.py
